Modify queue and play command to use services